k8s/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tique-taque-sync-admin
  namespace: tique-taque-sync-admin
  labels:
    app.kubernetes.io/name: tique-taque-sync-admin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: tique-taque-sync-admin
